--- a/index.html
+++ b/index.html
@@ -5,10 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
     <title>Encryption task</title>
 </head>
 <body>
-    
+    <div class="cipher">Cipher</div>
+    <div class="encryption">
+        <div class="mssg-encr">
+            <div class="info-text">Enter your message here</div>
+            <div></div>
+        </div>
+        <div class="secret-code-encr">
+            <div></div>
+            <div></div>
+        </div>
+        <div class="encrypted-mssg">
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+    <div class="decryption">
+        <div class="mssg-decpr">
+            <div></div>
+            <div></div>
+        </div>
+        <div class="secret-code-decpr">
+            <div></div>
+            <div></div>
+        </div>
+        <div class="decrypted-mssg">
+            <div></div>
+            <div></div>
+        </div>
+    </div>    
+
+
 
     <script src="script.js"></script>
 </body>
