creating decryption.js and updateing script.js with decryption button

--- a/index.html
+++ b/index.html
@@ -58,5 +58,6 @@
 
     <script src="script.js"></script>
     <script src="encryption.js"></script>
+    <script src="decryption.js"></script>
   </body>
 </html>
